--- a/Publish/Npm/package.json
+++ b/Publish/Npm/package.json
@@ -13,7 +13,7 @@
     "cross-env": "^7.0",
     "laravel-vite-plugin": "^1.2.0",
     "lodash": "^4.17.19",
-    "postcss": "^8.4.14",
+    "postcss": "^8.5.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
@@ -26,9 +26,14 @@
     "@mariojgt/masterui": "^0.5.5",
     "@mariojgt/wind-notify": "^0.0.3",
     "@mdi/js": "^7.0.96",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/core": "^1.42.1",
+    "@vue-flow/minimap": "^1.5.2",
     "lucide-vue-next": "^0.474.0",
     "vue": "^3.5.1",
-    "vue-loader": "^17.0.1"
+    "vue-loader": "^17.0.1",
+    "witchcraft-vs": "^0.1.1"
   }
 }
