--- a/Publish/Public/manifest.json
+++ b/Publish/Public/manifest.json
@@ -1,30 +1,15 @@
 {
-  "_bell-OxGHxPpI.js": {
-    "file": "assets/bell-OxGHxPpI.js",
-    "name": "bell",
-    "imports": [
-      "resources/vendor/Witchcraft/js/vue.js"
-    ]
-  },
-  "_database-C3pDS3iy.js": {
-    "file": "assets/database-C3pDS3iy.js",
-    "name": "database",
-    "imports": [
-      "resources/vendor/Witchcraft/js/vue.js"
-    ]
-  },
   "repo/witchcraft-node/src/components/nodes/ApiNode.vue": {
-    "file": "assets/ApiNode-D895HeNm.js",
+    "file": "assets/ApiNode-BX7F9Enm.js",
     "name": "ApiNode",
     "src": "repo/witchcraft-node/src/components/nodes/ApiNode.vue",
     "isDynamicEntry": true,
     "imports": [
-      "resources/vendor/Witchcraft/js/vue.js",
-      "_database-C3pDS3iy.js"
+      "resources/vendor/Witchcraft/js/vue.js"
     ]
   },
   "repo/witchcraft-node/src/components/nodes/ArtisanNode.vue": {
-    "file": "assets/ArtisanNode-CK58WBmF.js",
+    "file": "assets/ArtisanNode-D16mwRFd.js",
     "name": "ArtisanNode",
     "src": "repo/witchcraft-node/src/components/nodes/ArtisanNode.vue",
     "isDynamicEntry": true,
@@ -33,7 +18,7 @@
     ]
   },
   "repo/witchcraft-node/src/components/nodes/IfNode.vue": {
-    "file": "assets/IfNode-B3xOZN9n.js",
+    "file": "assets/IfNode-BNOlizvn.js",
     "name": "IfNode",
     "src": "repo/witchcraft-node/src/components/nodes/IfNode.vue",
     "isDynamicEntry": true,
@@ -42,27 +27,25 @@
     ]
   },
   "repo/witchcraft-node/src/components/nodes/ModelSelectNode.vue": {
-    "file": "assets/ModelSelectNode-CGNSohYf.js",
+    "file": "assets/ModelSelectNode-Csvh64iX.js",
     "name": "ModelSelectNode",
     "src": "repo/witchcraft-node/src/components/nodes/ModelSelectNode.vue",
     "isDynamicEntry": true,
     "imports": [
-      "resources/vendor/Witchcraft/js/vue.js",
-      "_bell-OxGHxPpI.js"
+      "resources/vendor/Witchcraft/js/vue.js"
     ]
   },
   "repo/witchcraft-node/src/components/nodes/NotificationNode.vue": {
-    "file": "assets/NotificationNode-C_JXh7tp.js",
+    "file": "assets/NotificationNode-DBTHfDGC.js",
     "name": "NotificationNode",
     "src": "repo/witchcraft-node/src/components/nodes/NotificationNode.vue",
     "isDynamicEntry": true,
     "imports": [
-      "resources/vendor/Witchcraft/js/vue.js",
-      "_bell-OxGHxPpI.js"
+      "resources/vendor/Witchcraft/js/vue.js"
     ]
   },
   "repo/witchcraft-node/src/components/nodes/ParseJsonNode.vue": {
-    "file": "assets/ParseJsonNode-CURclU_Q.js",
+    "file": "assets/ParseJsonNode-BBl61tBJ.js",
     "name": "ParseJsonNode",
     "src": "repo/witchcraft-node/src/components/nodes/ParseJsonNode.vue",
     "isDynamicEntry": true,
@@ -71,7 +54,7 @@
     ]
   },
   "repo/witchcraft-node/src/components/nodes/SwitchCaseNode.vue": {
-    "file": "assets/SwitchCaseNode-CK9rJjvf.js",
+    "file": "assets/SwitchCaseNode-BWAOVx3E.js",
     "name": "SwitchCaseNode",
     "src": "repo/witchcraft-node/src/components/nodes/SwitchCaseNode.vue",
     "isDynamicEntry": true,
@@ -80,17 +63,16 @@
     ]
   },
   "repo/witchcraft-node/src/components/nodes/TriggerNode.vue": {
-    "file": "assets/TriggerNode-CyfO1qvX.js",
+    "file": "assets/TriggerNode-CrHsagxF.js",
     "name": "TriggerNode",
     "src": "repo/witchcraft-node/src/components/nodes/TriggerNode.vue",
     "isDynamicEntry": true,
     "imports": [
-      "resources/vendor/Witchcraft/js/vue.js",
-      "_database-C3pDS3iy.js"
+      "resources/vendor/Witchcraft/js/vue.js"
     ]
   },
   "resources/js/witchcraft/nodes/ProcessOrderNode.vue": {
-    "file": "assets/ProcessOrderNode-DJiJKrEz.js",
+    "file": "assets/ProcessOrderNode-BmyNe1oY.js",
     "name": "ProcessOrderNode",
     "src": "resources/js/witchcraft/nodes/ProcessOrderNode.vue",
     "isDynamicEntry": true,
@@ -99,7 +81,7 @@
     ]
   },
   "resources/vendor/Witchcraft/js/vue.js": {
-    "file": "assets/vue-CIlr9HO7.js",
+    "file": "assets/vue-DMxFRkQw.js",
     "name": "vue",
     "src": "resources/vendor/Witchcraft/js/vue.js",
     "isEntry": true,
@@ -124,7 +106,7 @@
       "resources/js/witchcraft/nodes/ProcessOrderNode.vue"
     ],
     "css": [
-      "assets/vue-B-cjbCbK.css"
+      "assets/vue-CYuqOiAD.css"
     ]
   },
   "resources/vendor/Witchcraft/sass/app.scss": {
