--- a/Publish/Npm/package.json
+++ b/Publish/Npm/package.json
@@ -17,8 +17,8 @@
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
-    "tailwindcss": "^4.0.0",
-    "vite": "^6.0.11"
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.0.0"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
@@ -27,6 +27,7 @@
     "@mariojgt/wind-notify": "^0.0.3",
     "@mdi/js": "^7.0.96",
     "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue-flow/background": "^1.3.2",
     "@vue-flow/core": "^1.42.1",
