Add new feature to user dashboard
Implemented additional functionality in the user dashboard to enhance user experience. Updated relevant components .

--- a/Publish/Public/manifest.json
+++ b/Publish/Public/manifest.json
@@ -1,11 +1,11 @@
 {
   "resources/vendor/Witchcraft/js/vue.js": {
-    "file": "assets/vue-PiaDllnW.js",
+    "file": "assets/vue-D8hHYtLZ.js",
     "name": "vue",
     "src": "resources/vendor/Witchcraft/js/vue.js",
     "isEntry": true,
     "css": [
-      "assets/vue-DGIOLHja.css"
+      "assets/vue-Dw4IL2SY.css"
     ]
   },
   "resources/vendor/Witchcraft/sass/app.scss": {
