--- a/Publish/Public/manifest.json
+++ b/Publish/Public/manifest.json
@@ -1,11 +1,11 @@
 {
   "resources/vendor/Witchcraft/js/vue.js": {
-    "file": "assets/vue-LZ3wAiw_.js",
+    "file": "assets/vue-Cv9uzLmb.js",
     "name": "vue",
     "src": "resources/vendor/Witchcraft/js/vue.js",
     "isEntry": true,
     "css": [
-      "assets/vue-PSCL6vZ6.css"
+      "assets/vue-C7Nwv77b.css"
     ]
   },
   "resources/vendor/Witchcraft/sass/app.scss": {
